syntax = "proto3";

package proto_rpa;

option go_package="github.com/synerex/proto_rpa";

import "google/protobuf/timestamp.proto";

message User {
    fixed64 user_id = 1;
    string name = 2;
    google.protobuf.Timestamp last_updated = 3;
}
